--- a/pages/index/login.wxml
+++ b/pages/index/login.wxml
@@ -38,9 +38,12 @@
             </view>
           </view>
         </form>
-        <view class="confirm-btn" bindtap="bind">
+        <view wx:if="{{canIUseGetUserProfile}}" class="confirm-btn" bindtap="bind">
           <text>确认绑定</text>
         </view>
+        <button wx:else class="confirm-btn" open-type="getUserInfo" bindgetuserinfo="getUserInfo">
+          <text>确认绑定</text>
+        </button>
       </view>
 
       <view class="help" id="help" wx:if="{{help_status}}" bindtap="tapHelp">
