--- a/pages/index/login.wxml
+++ b/pages/index/login.wxml
@@ -32,7 +32,7 @@
           <view class="login-help">
             <view class="text-blue" bindtap="showHelp">老师亦可通过教务账号密码登录</view>
             <view>
-              <text class="line-blue light" bindtap="showResetModal">重置密码</text> | 
+              <!-- <text class="line-blue light" bindtap="showResetModal">重置密码</text> |  -->
               <text class="line-blue light" bindtap="showHelp">帮助</text>
               <text class="cuIcon-questionfill line-blue light"></text>
             </view>
