updated V3.1.6 权益投诉功能

--- a/pages/index/component/feecard.wxml
+++ b/pages/index/component/feecard.wxml
@@ -22,7 +22,7 @@
     </view>
   </navigator>
   <navigator url="{{unbindUrl}}" class="bg-white padding-bottom-xs" wx:if="{{unbindShow}}">
-    <tips tipsText="{{unbindTips}}"></tips>
+    <tips showImage="{{unbindTipsShowImage}}" tipsText="{{unbindTips}}"></tips>
     <view class="margin-tb-sm text-center">
       <button class="cu-btn round bg-green shadow">{{unbindButton}}</button>
     </view>
