--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -130,7 +130,7 @@
     </block>
 
     <!-- 电费信息 -->
-    <feecard
+    <!-- <feecard
       isShow="{{!(hasBindElesys && !elesysData)}}"
       title="寝室电费"
       titleRight="⚡️"
@@ -145,7 +145,7 @@
       unbindShow="{{!hasBindElesys}}"
       unbindTips="绑定关联寝室电费信息"
       unbindButton="绑定寝室"
-    ></feecard>
+    ></feecard> -->
 
      <!-- 网费信息 -->
      <feecard
@@ -165,6 +165,21 @@
       unbindButton="绑定校园网"
     ></feecard>
 
+     <!-- 权益投诉 -->
+     <view class="cu-list menu sm-border card-menu margin">
+      <view class="cu-bar bg-white solid-bottom">
+        <view class="action">
+          <text class="cuIcon-title text-green"></text>权益中心投诉维权
+        </view>
+        <view class="action padding-right"><text class="line-wegreen">⚖</text></view>
+      </view>
+      <view class="bg-white padding-bottom-xs">
+        <tips showImage="{{false}}" tipsText="向“北科天院权益中心”发起投诉维权"></tips>
+        <view class="margin-tb-sm text-center">
+          <button class="cu-btn round bg-green shadow" catchtap="showQuanyiModal">现在就去</button>
+        </view>
+      </view>
+    </view>
 
   </block>
   <!-- 未登录绑定 -->
@@ -176,3 +191,12 @@
   </block>
 
 </view>
+
+<!-- 权益中心二维码模态框 -->
+<imagemodal
+  hideBtnText="好，知道了"
+  image="https://upload-images.jianshu.io/upload_images/4697920-698445119e6dd3d5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/256"
+  height="{{431}}"
+  width="{{375}}"
+  showModal="{{quanyiModal}}"
+></imagemodal>
